--- a/portfolio.html
+++ b/portfolio.html
@@ -38,12 +38,12 @@
                 <h2>Identidade Visual</h2>
                 <div class="portfolio-grid-full">
                     <div class="portfolio-item-full">
-                        <img src="residencial polonia exemplo.jpg" alt="Projeto Residencial Polônia">
+                        <img src="residencial polonia exemplo.jpg" alt="Projeto Residencial Polônia" class="portfolio-image-1">
                         <h3>Residencial Polônia</h3>
                         <p>Logotipos criados para um residencial, um para cada condomínio.</p>
                     </div>
                     <div class="portfolio-item-full">
-                        <img src="Segurança logo exemplo.jpg" alt="Projeto Moura Segurança">
+                        <img src="Segurança logo exemplo.jpg" alt="Projeto Moura Segurança" class="portfolio-image-1">
                         <h3>Moura Segurança</h3>
                         <p>Empresa de segurança, design minimalista e direto.</p>
                     </div>
