--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,6 @@
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
-            <a href="contato.html" class="cta-button header-cta">Solicitar Orçamento</a>
         </div>
     </header>
 
@@ -90,7 +89,7 @@
                 <a href="contato.html">Contato</a>
             </div>
             <div class="footer-contact">
-                <p>contato@studiosemente.com.br</p>
+                <p>studiosementemarketing@gmail.com</p>
                 <!-- Adicionar links de redes sociais aqui -->
             </div>
             <p class="copyright">&copy; 2025 Studio Semente - Marketing & Social Mídia. Todos os direitos reservados.</p>
