--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <a href="contato.html">Contato</a>
             </div>
             <div class="footer-contact">
-                <p>contato@studiosemente.com.br</p>
+                <p>studiosementemarketing@gmail.com</p>
                 <!-- Adicionar links de redes sociais aqui -->
             </div>
             <p class="copyright">&copy; 2025 Studio Semente - Marketing & Social Mídia. Todos os direitos reservados.</p>
