--- a/contato.html
+++ b/contato.html
@@ -44,7 +44,9 @@
                     <h2>Nossos Canais</h2>
                     <p><strong>E-mail:</strong> studiosementemarketing@gmail.com</p>
                     <p><strong>WhatsApp:</strong>(11)934566594</p>
-                    <p><strong>Redes Sociais:</strong> (Links em breve)</p>
+                    <p><strong>Redes Sociais:</strong>  <a href="https://www.instagram.com/studiosemente.designe/" target="_blank" class="social-button">
+                        <img src="instagram-icon.png" alt="Instagram" class="social-icon"> Instagram
+                    </a></p>
                     <p>Responderemos sua mensagem o mais breve possível, geralmente em até 24 horas úteis.</p>
                     <p><strong>Localização:</strong> Rua Hamilton Prado 289, Franco da Rocha - SP.</p>
                 </div>
@@ -91,6 +93,9 @@
             <div class="footer-contact">
                 <p>studiosementemarketing@gmail.com</p>
                 <!-- Adicionar links de redes sociais aqui -->
+                <a href="https://www.instagram.com/studiosemente.designe/" target="_blank" class="social-button-footer">
+                    <img src="instagram-icon.png" alt="Instagram" class="social-icon"> Siga-nos no Instagram
+                </a>
             </div>
             <p class="copyright">&copy; 2025 Studio Semente - Marketing & Social Mídia. Todos os direitos reservados.</p>
         </div>
