--- a/servicos.html
+++ b/servicos.html
@@ -157,6 +157,9 @@
             <div class="footer-contact">
                 <p>studiosementemarketing@gmail.com</p>
                 <!-- Adicionar links de redes sociais aqui -->
+                <a href="https://www.instagram.com/studiosemente.designe/" target="_blank" class="social-button-footer">
+                    <img src="instagram-icon.png" alt="Instagram" class="social-icon"> Siga-nos no Instagram
+                </a>
             </div>
             <p class="copyright">&copy; 2025 Studio Semente - Marketing & Social Mídia. Todos os direitos reservados.</p>
         </div>
