--- a/portfolio.html
+++ b/portfolio.html
@@ -4,111 +4,238 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio - Studio Semente</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Header (igual ao index.html) -->
     <header>
         <div class="container">
-            <img src="logo.png" alt="Studio Semente Logo" class="logo">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="logo.png" alt="Studio Semente Logo">
+                </a>
+            </div>
             <nav>
-                <ul>
+                <ul class="desktop-menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
-                    <li><a href="portfolio.html">Portfólio</a></li>
+                    <li class="dropdown">
+                        <a href="#">Serviços <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="identidade-visual.html">Identidade Visual</a></li>
+                            <li><a href="design-grafico.html">Design Gráfico</a></li>
+                            <li><a href="web-design.html">Web Design</a></li>
+                            <li><a href="social-media.html">Social Media</a></li>
+                            <li><a href="consultoria.html">Consultoria</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="portfolio.html" class="active">Portfólio</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
+                <div class="mobile-menu-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </nav>
-            <a href="contato.html" class="cta-button header-cta">Solicitar Orçamento</a>
         </div>
     </header>
 
-    <main>
-        <section class="page-title">
-            <div class="container">
-                <h1>Nossos Trabalhos</h1>
+    <!-- Mobile Menu (igual ao index.html) -->
+    <div class="mobile-menu">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="#">Serviços</a>
+                <ul class="mobile-dropdown">
+                    <li><a href="identidade-visual.html">Identidade Visual</a></li>
+                    <li><a href="design-grafico.html">Design Gráfico</a></li>
+                    <li><a href="web-design.html">Web Design</a></li>
+                    <li><a href="social-media.html">Social Media</a></li>
+                    <li><a href="consultoria.html">Consultoria</a></li>
+                </ul>
+            </li>
+            <li><a href="portfolio.html" class="active">Portfólio</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>
+    </div>
+
+    <!-- Conteúdo da Página - Portfólio -->
+    <section class="page-header">
+        <div class="container">
+            <h1>Nosso Portfólio</h1>
+            <p>Projetos que cultivamos com criatividade e estratégia.</p>
+        </div>
+    </section>
+
+    <section class="portfolio-page">
+        <div class="container">
+            <!-- Filtros (Opcional, implementar com JS se necessário) -->
+            <div class="portfolio-filters">
+                <button class="filter-btn active" data-filter="all">Todos</button>
+                <button class="filter-btn" data-filter="identidade">Identidade Visual</button>
+                <button class="filter-btn" data-filter="grafico">Design Gráfico</button>
+                <button class="filter-btn" data-filter="web">Web Design</button>
+                <button class="filter-btn" data-filter="social">Social Media</button>
             </div>
-        </section>
 
-        <section class="page-content portfolio-page">
-            <div class="container">
-                <p>Aqui você encontra uma seleção de projetos desenvolvidos pelo Studio Semente. Cada trabalho reflete nossa dedicação em criar soluções visuais que ajudam pequenas empresas a se destacarem no mercado.</p>
-
-                <h2>Identidade Visual</h2>
-                <div class="portfolio-grid-full">
-                    <div class="portfolio-item-full">
-                        <img src="residencial polonia exemplo.jpg" alt="Projeto Residencial Polônia" class="portfolio-image-1">
+            <div class="portfolio-full-grid">
+                <!-- Item 1 -->
+                <div class="portfolio-item-full" data-category="identidade grafico">
+                    <img src="residencial polonia exemplo.jpg" alt="Projeto Residencial Polonia">
+                    <div class="portfolio-item-overlay">
                         <h3>Residencial Polônia</h3>
-                        <p>Logotipos criados para um residencial, um para cada condomínio.</p>
-                    </div>
-                    <div class="portfolio-item-full">
-                        <img src="Segurança logo exemplo.jpg" alt="Projeto Moura Segurança" class="portfolio-image-1">
-                        <h3>Moura Segurança</h3>
-                        <p>Empresa de segurança, design minimalista e direto.</p>
-                    </div>
-                     
-                </div>
-
-                <h2>Design para Redes Sociais</h2>
-                 <div class="portfolio-grid-full">
-                    <div class="portfolio-item-full">
-                        <img src="Post a3d 1.jpg" alt="Campanha Regularização imóveis" class="portfolio-image">
-                        <h3>Campanha "Regularização de imóveis"</h3>
-                        <p>Conteúdo referente à regularização de imóveis e demais serviços do local.</p>
-                    </div>
-                    <div class="portfolio-item-full">
-                        <img src="Post a3d 2.jpg" alt="Novo projeto entregue" class="portfolio-image">
-                        <h3>Novo Projeto entregue</h3>
-                        <p>Série de posts para a A3D Estrutural, referentes a novos projetos 3D entregues.</p>
+                        <p>Identidade Visual e Materiais Gráficos</p>
                     </div>
                 </div>
-
-                <h2>Web Design</h2>
-                 <div class="portfolio-grid-full">
-                    <div class="portfolio-item-full">
-                        <img src="site housecode.png" alt="Site Dedicado a House Code" class="portfolio-image">
-                        <h3>Site Institucional - Imobiliária House Code</h3>
-                        <p>Layout limpo e minimalista, dedicado a exibir os detalhes do condomínio aos clientes.</p>
-                        <a href="https://nezork.github.io/exemplo-vivaplay/" class="cta-button header-cta">Conheça o site.</a>
+                <!-- Item 2 -->
+                <div class="portfolio-item-full" data-category="identidade">
+                    <img src="Segurança logo exemplo.jpg" alt="Projeto Logo Segurança">
+                     <div class="portfolio-item-overlay">
+                        <h3>Logo Segurança</h3>
+                        <p>Identidade Visual</p>
                     </div>
-                    <br>
-                    <div class="portfolio-item-full">
-                        <img src="Site StudioSemente.png" alt="Landing Page Curso Online" class="portfolio-image">
-                        <h3>Studio Semente (você está aqui!)</h3>
-                        <p>Este próprio site é um exemplo do nosso trabalho com identidade visual e design responsivo.<br>
-                            Criado com foco em leveza, clareza e personalidade, ele expressa exatamente o que oferecemos aos nossos clientes.</p>
+               </div>
+                <!-- Item 3 -->
+                <div class="portfolio-item-full" data-category="social grafico">
+                    <img src="Post a3d 1.jpg" alt="Projeto Post A3D 1">
+                     <div class="portfolio-item-overlay">
+                        <h3>Post A3D</h3>
+                        <p>Social Media / Design Gráfico</p>
                     </div>
-                </div>
-
-                <div class="cta-section">
-                    <h2>Gostou do que viu?</h2>
-                    <p>Interessado(a) em ver mais detalhes ou discutir como podemos criar algo semelhante para sua empresa? Entre em contato!</p>
-                    <a href="contato.html" class="cta-button">Solicite um Orçamento</a>
-                </div>
+               </div>
+                <!-- Item 4 -->
+                 <div class="portfolio-item-full" data-category="social grafico">
+                    <img src="Post a3d 2.jpg" alt="Projeto Post A3D 2">
+                     <div class="portfolio-item-overlay">
+                        <h3>Post A3D</h3>
+                        <p>Social Media / Design Gráfico</p>
+                    </div>
+               </div>
+               <!-- Item 5 -->
+                <div class="portfolio-item-full" data-category="web">
+                    <img src="site housecode.png" alt="Projeto Site Housecode">
+                     <div class="portfolio-item-overlay">
+                        <h3>Site Housecode</h3>
+                        <p>Web Design</p>
+                    </div>
+               </div>
+               <!-- Item 6 -->
+                <div class="portfolio-item-full" data-category="identidade">
+                    <img src="Logo 1.jpg" alt="Projeto Logo 1">
+                     <div class="portfolio-item-overlay">
+                        <h3>Logo Exemplo 1</h3>
+                        <p>Identidade Visual</p>
+                    </div>
+               </div>
+               <!-- Item 7 -->
+                <div class="portfolio-item-full" data-category="identidade">
+                    <img src="Logo 2.jpg" alt="Projeto Logo 2">
+                     <div class="portfolio-item-overlay">
+                        <h3>Logo Exemplo 2</h3>
+                        <p>Identidade Visual</p>
+                    </div>
+               </div>
+               <!-- Item 8 -->
+                <div class="portfolio-item-full" data-category="grafico">
+                    <img src="Imp 1.jpg" alt="Projeto Impresso 1">
+                     <div class="portfolio-item-overlay">
+                        <h3>Material Impresso 1</h3>
+                        <p>Design Gráfico</p>
+                    </div>
+               </div>
+               <!-- Item 9 -->
+                <div class="portfolio-item-full" data-category="grafico">
+                    <img src="Imp 2.jpg" alt="Projeto Impresso 2">
+                     <div class="portfolio-item-overlay">
+                        <h3>Material Impresso 2</h3>
+                        <p>Design Gráfico</p>
+                    </div>
+               </div>
+               <!-- Item 10 -->
+                <div class="portfolio-item-full" data-category="web">
+                    <img src="Web 1.jpg" alt="Projeto Web 1">
+                     <div class="portfolio-item-overlay">
+                        <h3>Web Design Exemplo 1</h3>
+                        <p>Web Design</p>
+                    </div>
+               </div>
+               <!-- Item 11 -->
+                <div class="portfolio-item-full" data-category="web">
+                    <img src="Web 2.jpg" alt="Projeto Web 2">
+                     <div class="portfolio-item-overlay">
+                        <h3>Web Design Exemplo 2</h3>
+                        <p>Web Design</p>
+                    </div>
+               </div>
+               <!-- Item 12 -->
+                <div class="portfolio-item-full" data-category="social">
+                    <img src="Gestão 1.jpg" alt="Projeto Social Media 1">
+                     <div class="portfolio-item-overlay">
+                        <h3>Gestão Social Media 1</h3>
+                        <p>Social Media</p>
+                    </div>
+               </div>
+               <!-- Item 13 -->
+                <div class="portfolio-item-full" data-category="social">
+                    <img src="Gestão 2.jpg" alt="Projeto Social Media 2">
+                     <div class="portfolio-item-overlay">
+                        <h3>Gestão Social Media 2</h3>
+                        <p>Social Media</p>
+                    </div>
+               </div>
+                <!-- Adicionar mais itens conforme necessário -->
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
 
+    <!-- Footer (igual ao index.html) -->
     <footer>
         <div class="container">
-            <img src="logo.png" alt="Studio Semente Logo" class="logo-footer">
-            <div class="footer-links">
-                <a href="index.html">Home</a>
-                <a href="sobre.html">Sobre</a>
-                <a href="servicos.html">Serviços</a>
-                <a href="portfolio.html">Portfólio</a>
-                <a href="contato.html">Contato</a>
+            <div class="footer-top">
+                <div class="footer-logo">
+                    <img src="logo.png" alt="Studio Semente Logo" class="footer-logo-img">
+                </div>
             </div>
-            <div class="footer-contact">
-                <p>studiosementemarketing@gmail.com</p>
-                <!-- Adicionar links de redes sociais aqui -->
-                <a href="https://www.instagram.com/studiosemente.designe/" target="_blank" class="social-button-footer">
-                    <img src="instagram-icon.png" alt="Instagram" class="social-icon"> Siga-nos no Instagram
-                </a>
+            <div class="footer-menu">
+                <div class="footer-nav">
+                    <h3>NAVEGUE</h3>
+                    <ul>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="sobre.html">SOBRE</a></li>
+                        <li><a href="#">SERVIÇOS</a></li>
+                        <li><a href="portfolio.html">PORTFÓLIO</a></li>
+                        <li><a href="contato.html">CONTATO</a></li>
+                    </ul>
+                </div>
+                <div class="footer-contact">
+                    <h3>FALE CONOSCO</h3>
+                    <ul>
+                        <li><a href="mailto:contato@studiosmente.com.br">contato@studiosmente.com.br</a></li>
+                        <li><a href="tel:+5511999999999">(11) 99999-9999</a></li>
+                        <li><a href="https://wa.me/5511999999999" target="_blank" class="whatsapp-btn"><img src="logo-zap.jpg" alt="WhatsApp" style="height: 20px; vertical-align: middle; margin-right: 5px;"> WHATSAPP</a></li>
+                    </ul>
+                </div>
             </div>
-            <p class="copyright">&copy; 2025 Studio Semente - Marketing & Social Mídia. Todos os direitos reservados.</p>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Studio Semente. Todos os direitos reservados.</p>
+                <div class="social-icons">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
         </div>
     </footer>
+
+    <!-- Back to Top Button -->
+    <a href="#" class="back-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </a>
+
+    <script src="script.js"></script>
+    <!-- Adicionar script para filtros do portfólio se implementado -->
 </body>
 </html>
