--- a/sobre.html
+++ b/sobre.html
@@ -3,83 +3,150 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre - Studio Semente</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="logo.png" type="image/x-icon">
+    <title>Sobre Nós - Studio Semente</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Header (igual ao index.html) -->
     <header>
         <div class="container">
-            <img src="logo.png" alt="Studio Semente Logo" class="logo">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="logo.png" alt="Studio Semente Logo">
+                </a>
+            </div>
             <nav>
-                <ul>
+                <ul class="desktop-menu">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="sobre.html" class="active">Sobre</a></li>
+                    <li class="dropdown">
+                        <a href="#">Serviços <i class="fas fa-chevron-down"></i></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="identidade-visual.html">Identidade Visual</a></li>
+                            <li><a href="design-grafico.html">Design Gráfico</a></li>
+                            <li><a href="web-design.html">Web Design</a></li>
+                            <li><a href="social-media.html">Social Media</a></li>
+                            <li><a href="consultoria.html">Consultoria</a></li>
+                        </ul>
+                    </li>
                     <li><a href="portfolio.html">Portfólio</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
+                <div class="mobile-menu-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </nav>
-            <a href="contato.html" class="cta-button header-cta">Solicitar Orçamento</a>
         </div>
     </header>
 
-    <main>
-        <section class="page-title">
-            <div class="container">
-                <h1>Quem Somos</h1>
-            </div>
-        </section>
-
-        <section class="page-content">
-            <div class="container">
-                <p>O <strong>Studio Semente - Marketing & Social Mídia</strong> nasceu da paixão por ajudar pequenas empresas a crescerem através do design e marketing digital de qualidade. Acreditamos que toda grande empresa já foi uma pequena semente, e é nesse estágio inicial que o cuidado e atenção fazem toda a diferença.</p>
-                <p>Nossa missão é apoiar o crescimento de pequenas empresas novas ou recém-abertas através de soluções criativas e eficazes, cultivando seu potencial desde o início.</p>
-
-                <h2>Nossa Abordagem</h2>
-                <p>Diferente de grandes agências que trabalham com orçamentos robustos, o Studio Semente foi criado especificamente para atender às necessidades de negócios em fase inicial:</p>
-                <ul>
-                    <li><strong>Acessibilidade:</strong> Oferecemos soluções profissionais que cabem no orçamento de quem está começando.</li>
-                    <li><strong>Escalabilidade:</strong> Nossos serviços crescem junto com sua empresa, desde o logo inicial até campanhas completas.</li>
-                    <li><strong>Personalização:</strong> Cada projeto é único e recebe atenção individualizada.</li>
-                    <li><strong>Parceria:</strong> Não somos apenas prestadores de serviço, mas parceiros no crescimento do seu negócio.</li>
+    <!-- Mobile Menu (igual ao index.html) -->
+    <div class="mobile-menu">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="sobre.html" class="active">Sobre</a></li>
+            <li><a href="#">Serviços</a>
+                <ul class="mobile-dropdown">
+                    <li><a href="identidade-visual.html">Identidade Visual</a></li>
+                    <li><a href="design-grafico.html">Design Gráfico</a></li>
+                    <li><a href="web-design.html">Web Design</a></li>
+                    <li><a href="social-media.html">Social Media</a></li>
+                    <li><a href="consultoria.html">Consultoria</a></li>
                 </ul>
+            </li>
+            <li><a href="portfolio.html">Portfólio</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>
+    </div>
 
-                <h2>Nossos Valores</h2>
-                <ul>
-                    <li><strong>Criatividade:</strong> Buscamos soluções inovadoras para cada desafio.</li>
-                    <li><strong>Crescimento:</strong> Focamos em resultados que impulsionam seu negócio.</li>
-                    <li><strong>Transparência:</strong> Comunicação clara e processos sem surpresas.</li>
-                    <li><strong>Qualidade:</strong> Compromisso com a excelência em cada entrega.</li>
-                    <li><strong>Acessibilidade:</strong> Design profissional ao alcance de pequenas empresas.</li>
-                </ul>
+    <!-- Conteúdo da Página - Sobre Nós -->
+    <section class="page-header">
+        <div class="container">
+            <h1>Sobre o Studio Semente</h1>
+            <p>Cultivando ideias, colhendo resultados.</p>
+        </div>
+    </section>
 
-                <h2>Por Que Escolher o Studio Semente?</h2>
-                <p>Entendemos os desafios de quem está começando. Nosso diferencial está na combinação de qualidade profissional, preços acessíveis e atendimento personalizado. Trabalhamos para que sua marca não apenas exista, mas floresça no mercado competitivo atual.</p>
-                <p>Estamos prontos para ser o parceiro que sua empresa precisa nessa fase crucial de crescimento.</p>
+    <section class="service-details">
+        <div class="container">
+            <div class="service-content about-content"> <!-- Classe adicional para possível estilização -->
+                <div class="service-text">
+                    <h2>Nossa História</h2>
+                    <p>O Studio Semente nasceu da paixão por ver pequenas ideias se transformarem em grandes marcas. Acreditamos que toda empresa, independentemente do tamanho, carrega um potencial único que merece ser cultivado e florescer. Somos um estúdio de Marketing Digital e Social Media dedicado a ajudar pequenas e grandes empresas a germinar no competitivo mercado atual.</p>
+                    
+                    <h2>Nossa Missão</h2>
+                    <p>Nossa missão é fornecer soluções criativas e estratégicas de marketing e design que impulsionem o crescimento dos nossos clientes, construindo marcas fortes, autênticas e conectadas com seu público.</p>
+
+                    <h2>Nossa Visão</h2>
+                    <p>Ser reconhecido como um estúdio parceiro, que vai além do serviço contratado, participando ativamente do desenvolvimento e sucesso de cada "semente" que confia em nosso trabalho.</p>
+
+                    <h2>Nossos Valores</h2>
+                    <ul>
+                        <li><strong>Criatividade:</strong> Buscamos soluções inovadoras e originais.</li>
+                        <li><strong>Parceria:</strong> Trabalhamos lado a lado com nossos clientes.</li>
+                        <li><strong>Estratégia:</strong> Focamos em ações que geram resultados reais.</li>
+                        <li><strong>Transparência:</strong> Prezamos pela comunicação clara e honesta.</li>
+                        <li><strong>Paixão:</strong> Amamos o que fazemos e celebramos cada conquista.</li>
+                    </ul>
+                    
+                    <a href="contato.html" class="btn-membro" style="margin-top: 30px;">Vamos Conversar?</a>
+                </div>
+                <div class="service-image">
+                    <!-- Idealmente, uma foto da equipe ou do escritório -->
+                    <img src="floresta.png" alt="Ambiente Studio Semente">
+                    <img src="mato.png" alt="Detalhe Semente" style="margin-top: 20px;">
+                </div>
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
 
+    <!-- Footer (igual ao index.html) -->
     <footer>
         <div class="container">
-            <img src="logo.png" alt="Studio Semente Logo" class="logo-footer">
-            <div class="footer-links">
-                <a href="index.html">Home</a>
-                <a href="sobre.html">Sobre</a>
-                <a href="servicos.html">Serviços</a>
-                <a href="portfolio.html">Portfólio</a>
-                <a href="contato.html">Contato</a>
+            <div class="footer-top">
+                <div class="footer-logo">
+                    <img src="logo.png" alt="Studio Semente Logo" class="footer-logo-img">
+                </div>
             </div>
-            <div class="footer-contact">
-                <p>studiosementemarketing@gmail.com</p>
-                <!-- Adicionar links de redes sociais aqui -->
-                <a href="https://www.instagram.com/studiosemente.designe/" target="_blank" class="social-button-footer">
-                    <img src="instagram-icon.png" alt="Instagram" class="social-icon"> Siga-nos no Instagram
-                </a>
+            <div class="footer-menu">
+                <div class="footer-nav">
+                    <h3>NAVEGUE</h3>
+                    <ul>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="sobre.html">SOBRE</a></li>
+                        <li><a href="#">SERVIÇOS</a></li>
+                        <li><a href="portfolio.html">PORTFÓLIO</a></li>
+                        <li><a href="contato.html">CONTATO</a></li>
+                    </ul>
+                </div>
+                <div class="footer-contact">
+                    <h3>FALE CONOSCO</h3>
+                    <ul>
+                        <li><a href="mailto:contato@studiosmente.com.br">contato@studiosmente.com.br</a></li>
+                        <li><a href="tel:+5511999999999">(11) 99999-9999</a></li>
+                        <li><a href="https://wa.me/5511999999999" target="_blank" class="whatsapp-btn"><img src="logo-zap.jpg" alt="WhatsApp" style="height: 20px; vertical-align: middle; margin-right: 5px;"> WHATSAPP</a></li>
+                    </ul>
+                </div>
             </div>
-            <p class="copyright">&copy; 2025 Studio Semente - Marketing & Social Mídia. Todos os direitos reservados.</p>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Studio Semente. Todos os direitos reservados.</p>
+                <div class="social-icons">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
         </div>
     </footer>
+
+    <!-- Back to Top Button -->
+    <a href="#" class="back-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </a>
+
+    <script src="script.js"></script>
 </body>
 </html>
