--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="logo.png">
 </head>
 <body>
     <!-- Header -->
@@ -83,11 +84,15 @@
                     <img src="trajetoria.jpg" alt="Studio Semente Ambiente">
                 </div> 
             </div>
+            
         </div>
+        <div class="scroll-indicator">
+            <a href="#servicos"><i class="fas fa-chevron-down"></i></a>
+            </div>
     </section>
 
     <!-- Seção Nossos Serviços -->
-    <section class="nossos-servicos">
+    <section class="nossos-servicos" id="servicos">
         <div class="container">
             <h2>NOSSOS SERVIÇOS</h2>
             <p class="section-subtitle">Soluções completas para impulsionar sua marca no digital.</p>
@@ -233,8 +238,8 @@
                 <div class="footer-contact">
                     <h3>FALE CONOSCO</h3>
                     <ul>
-                        <li><a href="mailto:contato@studiosmente.com.br">contato@studiosmente.com.br</a></li> <!-- Email exemplo -->
-                        <li><a href="tel:+5511999999999">(11) 93456-6594</a></li> <!-- Telefone exemplo -->
+                        <li><a href="mailto:studiosementemarketing@gmail.com">studiosementemarketing@gmail.com</a></li> <!-- Email exemplo -->
+                        <li><a href="tel:+5511934566594">(11) 93456-6594</a></li> <!-- Telefone exemplo -->
                         <li><a href="https://wa.me/5511934566594" target="_blank" class="whatsapp-btn"><img src="logo-zap.jpg" alt="WhatsApp" style="height: 20px; vertical-align: middle; margin-right: 5px;"> WHATSAPP</a></li>
                     </ul>
                 </div>
