Atualização de links de contato

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 <div class="footer-contact">
                     <h3>FALE CONOSCO</h3>
                     <ul>
-                        <li><a href="mailto:studiosementemarketing@gmail.com">studiosementemarketing@gmail.com</a></li> <!-- Email exemplo -->
+                        <li><a href="mailto:contato@agsementedigital.com.br">contato@agsementedigital.com.br</a></li> <!-- Email exemplo -->
                         <li><a href="tel:+5511934566594">(11) 93456-6594</a></li> <!-- Telefone exemplo -->
                         <li><a href="https://wa.me/5511934566594" target="_blank" class="whatsapp-btn"><img src="logo-zap.jpg" alt="WhatsApp" style="height: 20px; vertical-align: middle; margin-right: 5px;"> WHATSAPP</a></li>
                     </ul>
@@ -249,7 +249,7 @@
                 <p>&copy; 2025 Studio Semente. Todos os direitos reservados.</p>
                 <div class="social-icons">
                     <!-- Adicionar links reais se existirem -->
-                    <a href="https://www.instagram.com/studiosemente.designe?igsh=MWRlajdwYTQ4eGJuYQ=="><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/ag.sementedigital?igsh=MWRlajdwYTQ4eGJuYQ=="><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
